2008-10-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* smerge-mode.el: Require diff-mode at run-time as well.

2008-10-28  Martin Rudalics  <rudalics@gmx.at>

	* vc-cvs.el (vc-cvs-stay-local): Fix typo in choice.
	* vc-hooks.el (vc-stay-local): Likewise.

2008-10-28  Phil Sung  <psung@mit.edu>  (tiny change)

	* follow.el (follow-scroll-down, follow-calc-win-end)
	(follow-estimate-first-window-start): Reduce effective window
	height when header line is present.  (Bug#925)

2008-10-28  Juanma Barranquero  <lekktu@gmail.com>

	* subr.el (locate-user-emacs-file): Simplify.  Don't create
	`user-emacs-directory' when Emacs is running in batch mode.

	* startup.el (inhibit-startup-screen): Reflow docstring.
	(user-mail-address, tool-bar-images-pixel-height): Fix docstring typos.

2008-10-27  Juanma Barranquero  <lekktu@gmail.com>

	* face-remap.el (text-scale-increase, text-scale-decrease)
	(text-scale-adjust): Remove &optional keyword from the arg list;
	the INC argument is not really optional, if the functions happen
	to be called from elisp.

2008-10-27  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el: Rename VC methods that were missed when vc-status was
	renamed to vc-dir.
	* vc-svn.el (vc-svn-dir-extra-headers): Rename from
	vc-svn-status-extra-headers.
	* vc-hg.el (vc-hg-dir-printer): Rename from vc-hg-status-printer.
	(vc-hg-dir-extra-header): Rename from vc-hg-status-extra-headers.
	* vc-git.el (vc-git-dir-printer): Rename from vc-dir-status-printer.
	(vc-git-dir-extra-headers): Rename from vc-git-status-extra-headers.
	* vc-dir.el (vc-dir-mode): Use vc-dir-printer instead of
	vc-dir-status-printer.
	(vc-dir-headers): Use `dir-extra-headers' instead of
	`status-extra-headers'.
	(vc-dir-printer): Rename from vc-dir-status-printer.
	(vc-default-dir-extra-headers): Rename from
	vc-default-status-extra-headers.
	* vc-cvs.el (vc-cvs-dir-extra-headers): Rename from
	vc-cvs-status-extra-headers.

	* startup.el (server-name): Pacify byte compiler.